UITransitions: Landing & Notification views, fix for animations overlapping when clicking too fast

--- a/src/styles/views/_main.scss
+++ b/src/styles/views/_main.scss
@@ -225,6 +225,12 @@ svg {
     opacity: 0;
 }
 
+
+// VIEWS SPECIFIC STYLES
+#landingContainer {
+    z-index: 2;
+}
+
 #receivedContainer, #receivedLandingContainer {
     padding-top: 71px;
 
